--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="main-body">
         <div class="main-container">
             <div class="recent-posts">
                 <div class="main-advertisement">
@@ -189,5 +189,65 @@
         </div>
         
     </main>
+
+    <!-- footer  -->
+    <footer>
+        <div class="main-container">
+            <div class="main-footer">
+                <div class="footer-top">
+                    <div class="footer-menu">
+                        <div class="footer-menu-left">
+                            <ul>
+                                <li>
+                                    <a href="#">Tentang kami</a>
+                                </li>
+                                <li>
+                                    <a href="#">Kontak</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="footer-menu-left">
+                            <ul>
+                                <li>
+                                    <a href="#">Privacy Policy</a>
+                                </li>
+                                <li>
+                                    <a href="#">Karir</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+
+
+                    <div class="footer-social-media">
+                        <div class="thumbnail-sosmed">
+                           <img src="">
+                        </div>
+                        <div class="thumbnail-sosmed">
+                            <img src="">
+                         </div>
+                         <div class="thumbnail-sosmed">
+                            <img src="">
+                         </div>
+                    </div>
+                </div>
+
+
+
+                <div class="footer-bottom">
+                    <div class="footer-logo">
+                        dianisa.com
+                    </div>
+
+                    <div class="footer-watermark">
+                        © 2021 Dianisa media
+                    </div>
+                </div>
+            
+            </div>
+        </div>
+    </footer>
+
 </body>
 </html>
