--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                     </h3>
                                 </div>
                                 <span class="author-post-inside">
-                                   By <a href="#">Rudi Dian Arifin</a> 
+                                   <a href="#">Rudi Dian Arifin</a> 
                                 </span>
                             </div>
                         </div>
@@ -102,7 +102,7 @@
                                     </h3>
                                 </div>
                                 <span class="author-post-inside">
-                                   By <a href="#">Yunita Setiyaningsih</a> 
+                                   <a href="#">Yunita Setiyaningsih</a> 
                                 </span>
                             </div>
                         </div>
@@ -124,7 +124,7 @@
                                     </h3>
                                 </div>
                                 <span class="author-post-inside">
-                                   By <a href="#">Wahyu Setia Bintara</a> 
+                                    <a href="#">Wahyu Setia Bintara</a> 
                                 </span>
                             </div>
                         </div>
@@ -146,7 +146,7 @@
                                     </h3>
                                 </div>
                                 <span class="author-post-inside">
-                                   By <a href="#">Wahyu Setia Bintara</a> 
+                                   <a href="#">Wahyu Setia Bintara</a> 
                                 </span>
                             </div>
                         </div>
@@ -168,7 +168,7 @@
                                     </h3>
                                 </div>
                                 <span class="author-post-inside">
-                                   By <a href="#">Wahyu Setia Bintara</a> 
+                                   <a href="#">Wahyu Setia Bintara</a> 
                                 </span>
                             </div>
                         </div>
@@ -189,7 +189,7 @@
                                     </h3>
                                 </div>
                                 <span class="author-post-inside">
-                                   By <a href="#">Wahyu Setia Bintara</a> 
+                                   <a href="#">Wahyu Setia Bintara</a> 
                                 </span>
                             </div>
                         </div>
@@ -211,7 +211,7 @@
                                     </h3>
                                 </div>
                                 <span class="author-post-inside">
-                                   By <a href="#">Wahyu Setia Bintara</a> 
+                                   <a href="#">Wahyu Setia Bintara</a> 
                                 </span>
                             </div>
                         </div>
