--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     </div>
                     <div class="brand-logo">
                         <a href="#" alt="dianisa.com" title="dianisa.com">
-                            <img src="style/img/dianisa.svg" alt="">
+                            <img src="style/img/dianisa-com.svg" alt="">
                         </a>
                     </div>
     
@@ -400,7 +400,7 @@
 
                 <div class="footer-bottom">
                     <div class="footer-logo">
-                        <img src="style/img/dianisa.svg" alt="">
+                        <img src="style/img/dianisa-com.svg" alt="">
                     </div>
 
                     <div class="footer-watermark">
