--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="header-in">
                 <div class="header-container">
                     <div class="main-menu">
-                        <img src="style/img/menu-icon.png" alt="">
+                        <!-- <img src="style/img/menu-icon.svg" alt=""> -->
                     </div>
                     <div class="brand-logo">
                         <a href="#" alt="dianisa.com" title="dianisa.com">
@@ -47,11 +47,11 @@
             </div>
 
             <!-- header buttom for advertisement -->
-            <div class="header-bottom">
+            <!-- <div class="header-bottom">
                 <div class="header-container">
                     <a href="#">Promo! dapatkan Macbook hanya dengan harga 16 juta di sini » </a>
                 </div>
-            </div>
+            </div> -->
 
         </div>
     </header>
