--- a/index.html
+++ b/index.html
@@ -19,7 +19,24 @@
                 <div class="header-container">
                     <div class="main-menu">
                         <!-- <img src="style/img/menu-icon.svg" alt=""> -->
+
+                        <div class="menu-dropdown">
+                            <div class="dropdown">
+                                <nav>
+                                    <a href="">News</a>
+                                    <a href="">Mobile</a>
+                                    <a href="">Gadgets</a>
+                                    <a href="">Computers</a>
+                                    <a href="">Internet</a>
+                                    <a href="">Community</a>
+                                </nav>
+                            </div>
+                        </div>
+
                     </div>
+
+                    
+
                     <div class="brand-logo">
                         <a href="#" alt="dianisa.com" title="dianisa.com">
                             <img src="style/img/dianisa-com.svg" alt="">
