--- a/single-post.html
+++ b/single-post.html
@@ -245,6 +245,32 @@
                         </div>
                         
                         </div>
+
+
+                        <!-- comment  -->
+
+                        <div class="main-comment">
+                            <div class="comment-form">
+                                <div class="discussion-comment">
+                                   <p>Discussion | 67 Comments</p>
+                                </div>
+                                <form class="form-comment" action="">
+                                    <textarea placeholder="Tulis komentar Anda..." name="comment" id="comment" class="comment"  rows="2" required></textarea>
+
+                                    <input id="author" class="author"   name="author" placeholder="Nama..." type="text" required>
+                                    
+                                    <input id="email" class="email" name="email" placeholder="Email..." type="text" required>
+
+                                    <input type="submit" name="submit" id="submit" class="submit" value="Post comment" >
+                                </form>
+
+                                <p class="comment-notif" >*Komentar Anda akan muncul setelah disetujui</p>
+                            </div>
+
+
+                        </div>
+
+                        <!-- comment  -->
                     </div>
 
 
