--- a/single-post.html
+++ b/single-post.html
@@ -123,7 +123,52 @@
                             
                         </div>
                         <div class="header-post-link">
-                            Comments
+
+                            <div class="comment-count">
+                                <a href="#discussion-comment" >28 Comments</a>
+                            </div>
+
+                            <div class="social-share">
+
+                                <a href="" class="twitter-share" target="_blank" >
+                                    <img src="/Code/style/img/twitter-svgrepo-com.svg" alt="" title="Twitter Share">
+                                </a>
+
+                                <a href="" class="facebook-share" target="_blank" title="Facebook Share">
+                                    <img src="/Code/style/img/facebook-box-svgrepo-com.svg" alt="">
+                                </a>
+
+                                <div class="more-shares">
+                                    <div class="dropdown-share">
+                                        <a class="dropdown-twitter-share" href="" target="_blank" >
+                                            <img src="/Code/style/img/twitter-svgrepo-com.svg" alt="">
+                                        </a>
+
+                                        <a class="dropdown-facebook-share" href="" target="_blank" >
+                                            <img src="/Code/style/img/facebook-svgrepo-com.svg" alt="">
+                                        </a>
+
+                                        <a class="dropdown-pinterest-share" href="" target="_blank" >
+                                            <img src="/Code/style/img/pinterest-svgrepo-com.svg" alt="">
+                                        </a>
+
+                                        <a class="dropdown-linkedin-share" href="" target="_blank" >
+                                            <img src="/Code/style/img/linkedin-svgrepo-com.svg" alt="">
+                                        </a>
+
+                                        <a class="dropdown-whatsapp-share" href="" target="_blank" >
+                                            <img src="/Code/style/img/whatsapp-svgrepo-com.svg" alt="">
+                                        </a>
+
+                                    </div>
+
+                                </div>
+
+                                <a href="" class="copy-link" title="Copy link">
+                                    <img src="/Code/style/img/link-2-svgrepo-com.svg" alt="" >
+                                </a>
+                            </div>
+
                         </div>
                     </div>
                 </div>
@@ -170,6 +215,8 @@
                             </figcaption>
                         </figure>
 
+                        <pre class="wp-block-code"><code>get_comments( string|array $args = '' ) DISM /Online /Cleanup-image /Restorehealth DISM /Online /Cleanup-image /Restorehealth</code></pre>
+
                         <p>
                             Lorem Ipsum adalah contoh teks atau dummy dalam industri percetakan dan penataan huruf atau typesetting. Lorem Ipsum telah menjadi standar contoh teks sejak tahun 1500an, saat seorang tukang cetak yang tidak dikenal mengambil sebuah kumpulan teks dan mengacaknya untuk menjadi sebuah buku contoh huruf. Ia tidak hanya bertahan selama 5 abad, tapi juga telah beralih ke penataan huruf elektronik, tanpa ada perubahan apapun. Ia mulai dipopulerkan pada tahun 1960 dengan diluncurkannya lembaran-lembaran Letraset yang menggunakan kalimat-kalimat dari Lorem Ipsum, dan seiring munculnya perangkat lunak Desktop Publishing seperti Aldus PageMaker juga memiliki.
                         </p>
@@ -206,6 +253,8 @@
                         <p>
                             Lorem Ipsum adalah contoh teks atau dummy dalam industri percetakan dan penataan huruf atau typesetting. Lorem Ipsum telah menjadi standar contoh teks sejak tahun 1500an, saat seorang tukang cetak yang tidak dikenal mengambil sebuah kumpulan teks dan mengacaknya untuk menjadi sebuah buku contoh huruf. Ia tidak hanya bertahan selama 5 abad, tapi juga telah beralih ke penataan huruf elektronik, tanpa ada perubahan apapun. Ia mulai dipopulerkan pada tahun 1960 dengan diluncurkannya lembaran-lembaran Letraset yang menggunakan kalimat-kalimat dari Lorem Ipsum, dan seiring munculnya perangkat lunak Desktop Publishing seperti Aldus PageMaker juga memiliki.
                         </p>
+
+                        
                         <ul>
                             <li>
                                 Pertama, akses website Converter berikut ini : <a href="#">video.online-convert.com</a>  
@@ -217,7 +266,7 @@
                                 Pada bagian Saved settings, pilih Resolusi Video yang diinginkan.
                             </li>
                             <li>
-                                Di bagian Video & Audio Settings, atur sesuai keinginan.
+                                <strong>Di bagian Video</strong> & Audio Settings, atur sesuai keinginan.
                             </li>
                             <li>
                                 Anda dapat memasukkan Nama File tersebut di bagian Save Settings. Namun untuk tahap ini, Anda harus Login terlebih dahulu.
@@ -274,7 +323,7 @@
 
                         <div class="main-comment">
                             <div class="comment-form">
-                                <div class="discussion-comment">
+                                <div id="discussion-comment" class="discussion-comment">
                                    <p>Discussion | 67 Comments</p>
                                 </div>
                                 <form class="form-comment" action="">
