--- a/single-post.html
+++ b/single-post.html
@@ -221,6 +221,73 @@
                             Lorem Ipsum adalah contoh teks atau dummy dalam industri percetakan dan penataan huruf atau typesetting. Lorem Ipsum telah menjadi standar contoh teks sejak tahun 1500an, saat seorang tukang cetak yang tidak dikenal mengambil sebuah kumpulan teks dan mengacaknya untuk menjadi sebuah buku contoh huruf. Ia tidak hanya bertahan selama 5 abad, tapi juga telah beralih ke penataan huruf elektronik, tanpa ada perubahan apapun. Ia mulai dipopulerkan pada tahun 1960 dengan diluncurkannya lembaran-lembaran Letraset yang menggunakan kalimat-kalimat dari Lorem Ipsum, dan seiring munculnya perangkat lunak Desktop Publishing seperti Aldus PageMaker juga memiliki.
                         </p>
 
+                        <figure class="wp-block-table">
+                            <table class="has-fixed-layout">
+                                <tbody>
+                                    <tr>
+                                        <th>Opsi Video</th>
+                                        <th>Resolusi Video</th>
+                                        <th>Keterangan</th>
+                                    </tr>
+                                    <tr>
+                                        <td><strong>Ultra HD (4k)</strong></td>
+                                        <td>3840 x 2160 (Ukuran file terbesar)</td>
+                                        <td>Monitor besar</td>
+                                    </tr>
+                                    <tr>
+                                        <td><strong>Full HD (1080p)</strong></td><td>1920 x 1080 (Ukuran file besar)</td><td>Layar komputer dan HD
+                                            <ul>
+                                                <li>Aku saja Layar komputer dan HD Aku saja Layar komputer dan HD Aku saja Layar komputer dan HD </li>
+                                                <li>Aku saja Layar komputer dan HD</li>
+                                                <li>Aku saja</li>
+                                                <li>Aku saja</li>
+                                                <li>Aku saja</li>
+                                            </ul>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td><strong>HD (720p)</strong></td><td>1280 x 720 (Ukuran file sedang)</td><td>Internet dan DVD</td>
+                                    </tr>
+                                    <tr>
+                                        <td><strong>Standar (480p)</strong></td>
+                                        <td>852 x 480 (Ukuran file terkecil)</td>
+                                        <td>Perangkat portabel</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </figure>
+
+                        <figure class="wp-block-table">
+                            <table class="has-fixed-layout">
+                            <thead>
+                            <tr>
+                                <th>Opsi Video</th>
+                                <th>Keterangan</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td>
+                                    <strong>Tampilan Komputer &amp; HD</strong>
+                                </td>
+                                <td>Ukuran file besar dan kualitas tingkat tinggi</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <strong>Internet &amp; HD</strong>
+                                </td>
+                                <td>Ukuran file sedang dan kualitas tingkat menengah</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <strong>Perangkat Portabel</strong>
+                                </td>
+                                <td>Ukuran file kecil dan kualitas tingkat rendah</td>
+                            </tr>
+                            </tbody>
+                            </table>
+                            </figure>
+
                         <p>
                             Lorem Ipsum adalah contoh teks atau dummy dalam industri percetakan dan penataan huruf atau typesetting. Lorem Ipsum telah menjadi standar contoh teks sejak tahun 1500an, saat seorang tukang cetak yang tidak dikenal mengambil sebuah kumpulan teks dan mengacaknya untuk menjadi sebuah buku contoh huruf. Ia tidak hanya bertahan selama 5 abad, tapi juga telah beralih ke penataan huruf elektronik, tanpa ada perubahan apapun. Ia mulai dipopulerkan pada tahun 1960 dengan diluncurkannya lembaran-lembaran Letraset yang menggunakan kalimat-kalimat dari Lorem Ipsum, dan seiring munculnya perangkat lunak Desktop Publishing seperti Aldus PageMaker juga memiliki.
                         </p>
