--- a/single-post.html
+++ b/single-post.html
@@ -267,7 +267,7 @@
                                 </tbody>
                             </table>
                         </figure>
-                        
+
                         <p>
                             Lorem Ipsum adalah contoh teks atau dummy dalam industri percetakan dan penataan huruf atau typesetting. Lorem Ipsum telah menjadi standar contoh teks sejak tahun 1500an, saat seorang tukang cetak yang tidak dikenal mengambil sebuah kumpulan teks dan mengacaknya untuk menjadi sebuah buku contoh huruf. Ia tidak hanya bertahan selama 5 abad, tapi juga telah beralih ke penataan huruf elektronik, tanpa ada perubahan apapun. Ia mulai dipopulerkan pada tahun 1960 dengan diluncurkannya lembaran-lembaran Letraset yang menggunakan kalimat-kalimat dari Lorem Ipsum, dan seiring munculnya perangkat lunak Desktop Publishing seperti Aldus PageMaker juga memiliki.
                         </p>
@@ -386,26 +386,73 @@
                         
                         <figure class="wp-block-table">
                             <table>
+                                <thead>
+                                    <tr>
+                                        <th>Info</th>
+                                        <th>Keterangan</th>
+                                    </tr>
+                                </thead>
                             <tbody>
                             <tr>
                                 <td>
-                                    <strong>mencoba memulihkan informasi</strong>
+                                    <strong>Colors</strong>
+                                </td>
+                                <td>Olive, Graphite, Lavender, dan juga White</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <strong>Dimension and Weight</strong>
                                 </td>
                                 <td>
-                                    Menemukan <em>bad sector</em> dan mencoba memulihkan informasi apa pun yang dapat dibaca darinya
+                                    <strong>Earbud</strong><br>
+                                    Dimensions: 17.0 x 20.9 x 21.1mm<br>
+                                    Weight: 5.0g <br>
+                                    <strong>Charging Case</strong><br>
+                                    Dimensions: 50.2 x 50.0 x 27.8mm<br>Weight: 41.2g</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <strong>Performance</strong>
+                                </td>
+                                <td>
+                                    <strong>Chipset:</strong>BES2500ZP <br>
+                                    <strong>OS:</strong>RTOS <br>
+                                    <strong>Speaker:</strong>Dynamic 2 Way: Woofer &amp; Tweeter <br>
+                                    <strong>Mic:</strong>3 Mics + VPU <br>
+                                    <strong>Connectivity</strong><br>
+                                    Bluetooth: 5.2 BT <br>
+                                    Profile: HFP, A2DP, AVRCP <br>
+                                    Codec: Scalable (Samsung proprietary), AAC, SBC <br>
+                                    <strong>Sensor:</strong> Accelerometer, Gyro, Proximity, Hall, Touch, VPU (Voice Pickup Unit) &nbsp;
                                 </td>
                             </tr>
                             <tr>
                                 <td>
-                                    <strong>/f</strong>
+                                    <strong>Battery</strong>
                                 </td>
                                 <td>
-                                    Memperbaiki setiap kesalahan yang ditemukan pada disk
+                                    <strong>Play time</strong><br>
+                                    5h / TTL 20h (ANC ON) <br>
+                                    *Bixby voice wake-up OFF <br>
+                                    7.5h / TTL 29h (ANC Off) <br>
+                                    <strong>Talk time</strong> 3.5h / TTL 13h (ANC ON) <br>
+                                    3.5h / TTL 14h (ANC Off) <br>
+                                    <strong>Quick charging</strong><br>
+                                    40min play / 3min charging (Wired, Wireless, D2D) <br>
+                                    60min play / 5min charging (Wired, Wireless, D2D) <br>150min play / 10min charging (Wired, Wireless)</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <strong>In the box</strong>
                                 </td>
+                                <td>
+                                    Earbuds 1 set <br>
+                                    Charging Case <br>
+                                    Ear tips (Small, Medium, Large) <br>
+                                    Cable (USB Type-C) <br>Quick Start Guide</td>
                             </tr>
                             </tbody>
                             </table>
-
                         </figure>
 
                         <figure class="wp-block-table">
