--- a/page.html
+++ b/page.html
@@ -169,7 +169,7 @@
                     </div>
                 </div>
 
-                <div class="recent-posts-main">
+                <div class="recent-posts-main single-page-main">
                     <div class="recent-post-index">
 
                       <div class="main-post">
