--- a/single-post.html
+++ b/single-post.html
@@ -593,17 +593,21 @@
                             </div> 
                         </div>
 
-                        <ul class="sumber_ref" >
-                            <li>
-                                Pertama, akses website Converter berikut ini : video.online-convert.com
-                            </li>
-                            <li>
-                                Klik Choose Files, pilih file .ppt yang ingin diubah » tunggu proses upload.
-                            </li>
-                        </ul>
-
-
                         <p class="pustaka_ref" >~ Artikel ditulis oleh Rudi Dian Arifin, Editor oleh Wahyu Setia Bintara</p>
+                        
+                        <hr class="hr_down">
+
+                        <ol class="sumber_ref" >
+                            <li>
+                                <a href="">Pertama, akses website Converter berikut ini : video.online-convert.com</a> 
+                            </li>
+                            <li>
+                                <a href="">Jika Anda ingin membatalkannya, dapat Anda lakukan dengan cara klik tombol</a> 
+                            </li>
+                        </ol>
+
+
+
 
 
                         <div class="tags">
