--- a/single-post.html
+++ b/single-post.html
@@ -610,7 +610,7 @@
 
 
 
-                        <div class="tags">
+                        <div id="tags" class="tags">
                             Tags :  
                             <a href="#">Android</a>
                             |
@@ -631,7 +631,7 @@
                                 <div id="discussion-comment" class="discussion-comment">
                                    <p>Discussion | 67 Comments</p>
                                 </div>
-                                <form class="form-comment" action="">
+                                <form class="comment-form" action="">
                                     <textarea placeholder="Tulis komentar Anda..." name="comment" id="comment" class="comment"  rows="2" required></textarea>
 
                                     <input id="author" class="author"   name="author" placeholder="Nama..." type="text" required>
